--- a/junior/pom.xml
+++ b/junior/pom.xml
@@ -2,6 +2,13 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>junior</artifactId>
     <version>2.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>ru.job4j</groupId>
+            <artifactId>job4j</artifactId>
+            <version>2.0</version>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
     <parent>
         <groupId>ru.job4j</groupId>
