--- a/junior/pom.xml
+++ b/junior/pom.xml
@@ -2,17 +2,34 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>junior</artifactId>
     <version>2.0</version>
-    <dependencies>
-        <dependency>
-            <groupId>ru.job4j</groupId>
-            <artifactId>job4j</artifactId>
-            <version>2.0</version>
-        </dependency>
-    </dependencies>
     <packaging>jar</packaging>
-    <parent>
+      <parent>
         <groupId>ru.job4j</groupId>
         <artifactId>job4j</artifactId>
         <version>2.0</version>
     </parent>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.6.2</version>
+                <configuration>
+                    <changeLogFile>${basedir}/db/master.xml</changeLogFile>
+                    <url>${db.url}</url>
+                    <driver>${db.driver}</driver>
+                    <username>${db.username}</username>
+                    <password>${db.password}</password>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
